# cpp-oop-labs

./: README.md
lab1-BigInt/: CMakeLists.txt  README.md
lab1-BigInt/lib/include/: bigint.h
lab1-BigInt/lib/src/: bigint.cpp
lab1-BigInt/lib/test/: CMakeLists.txt  bigint_test.cpp
lab1-BigInt/src/: main.cpp
lab2-PrisonersDilemma/: CMakeLists.txt  README.md
lab2-PrisonersDilemma/includes/: AlTitForTatStrategy.h  BetrayalStrategy.h  DefaultStrategy.h  EgTitForTatStrategy.h  Factory.h  Game.h  IStrategy.h  Parsing.h  SilenceStrategy.h  SmartStrategy.h
lab2-PrisonersDilemma/src/: Factory.cpp  Game.cpp  Parsing.cpp  main.cpp
lab2-PrisonersDilemma/strategys/: AlTitForTatStrategy.cpp  BetrayalStrategy.cpp  DefaultStrategy.cpp  EgTitForTatStrategy.cpp  SilenceStrategy.cpp  SmartStrategy.cpp
lab3-SoundProcessor/: CMakeLists.txt  README.md
lab3-SoundProcessor/converters/: MixConverter.cpp  MutingConverter.cpp  ReverseSecConverter.cpp
lab3-SoundProcessor/includes/: Convert.h  Factory.h  IConverter.h  MixConverter.h  MutingConverter.h  Parsing.h  ReverseSecConverter.h
lab3-SoundProcessor/src/: Convert.cpp  Factory.cpp  Parsing.cpp  main.cpp
